# okf-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  activate.sh  pyproject.toml
.github/workflows/: ci.yml
agent/: AGENT.md
docs/: cli-reference.md  getting-started.md  mcp-setup.md  metrics.md  team-setup.md  use-cases.md  validation-checklist.md
src/okf_tools/: __init__.py  bundle.py  cli.py  config.py  errors.py  search.py  server.py  service.py  sync.py
tests/: conftest.py  test_bundle.py  test_cli.py  test_config.py  test_move.py  test_search.py  test_server.py  test_server_properties.py  test_sync.py
